--- a/estils_equacio/estils_equacio.css
+++ b/estils_equacio/estils_equacio.css
@@ -1,10 +1,8 @@
 
-
+/* Estils per la secció calculadora i el botó de calcula */
 .calculadora {
     background-color: inherit;
 }
-
-
 
 #calcula {
     transition: background-color, transform, outline, .5s ease-out;
@@ -27,9 +25,6 @@
     transform: scale(0.95);
 }
 
-
-
-
 #contenidor-equacio {
     transition: background-color .5s ease-out;
     background-color: var(--color-fons-2-tema);
@@ -43,12 +38,12 @@
     display: inline-flex;
 }
 
-
 #entrada-principal {
     transition: background-color .5s ease-out;
     width: 50%;
 }
 
+/* Estils per a totes les entrades */
 .entrada {
     transition: background-color .5s ease-out;
     border: none;
@@ -105,7 +100,7 @@ input:focus {
 
 
 
-/* Arrels i potencies */
+/* Arrels i potències */
 .radicand, .radicand-fraccio {
     border-top: 1px solid var(--color-tema);
 }
